--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap');
 * {
   box-sizing: inherit;
 }
@@ -923,7 +923,7 @@ a {
   }
 }
 
-/**********pour les iphone8*********/
+/**********pour les téléphones mobiles*********/
 @media screen and (max-width: 768px) {
   /***header***/
 
