--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html,
 body {
   width: auto;
   height: auto;
-  max-width: 1400px;
+  
   overflow-x: hidden;
   font-family: raleway, sans-serif;
 }
@@ -14,7 +14,7 @@ body {
 /***Onglets en haut à droite***/
 header {
   width: 100%;
-  max-width: none;
+ 
   min-width: 330px;
   display: flex;
   justify-content: space-between;
@@ -65,6 +65,9 @@ header {
   color: #0065fc;
 }
 
+main {
+  width: auto;
+}
 /*** section1 Recherche et Filtres***/
 #searchandfiltersection {
   margin: 0px 40px 15px 40px;
@@ -646,6 +649,14 @@ a {
 }
 
 /***media queries***/
+/***pour les écrans au-desuus de 1400px***/
+@media screen and (min-width: 1400px) {
+  html, body {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
 /***pour les ordis en-dessous de 1315px***/
 @media screen and (max-width: 1315px) {
   .icons {
