--- a/css/styles.css
+++ b/css/styles.css
@@ -655,6 +655,9 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+footer{
+  height: auto;
+}
 }
 
 /***pour les ordis en-dessous de 1315px***/
