--- a/css/styles.css
+++ b/css/styles.css
@@ -602,7 +602,7 @@ h4 {
 /***footer***/
 footer {
   width: 100%;
-  height: 250px;
+  height: auto;
   margin: 65px 0px 0px 0px;
   background-color: #f2f2f2;
   background-size: cover;
