correction footer pour mozilla2

--- a/css/styles.css
+++ b/css/styles.css
@@ -922,7 +922,7 @@ footer{
     margin-left: 0px;
     justify-content: space-around;
     padding: 60px 40px 0px 0px;
-    width: auto;
+    width: 100%;
     overflow: hidden;
   }
   .footerbox {
