--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,11 @@
 html,
 body {
   width: auto;
-  height: auto; 
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+
   overflow-x: hidden;
   font-family: raleway, sans-serif;
 }
