--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap');
-* {
-  box-sizing: inherit;
+*, :before, :after {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 html,
 body {
@@ -9,7 +11,6 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh; 
-
   overflow-x: hidden;
   font-family: raleway, sans-serif;
 }
@@ -362,7 +363,7 @@ h4 {
 /***Panneau de droite***/
 #rightpannel {
   width: 31%;
-  height: 640px;
+  height: 623px;
   padding: 20px 15px 0px 15px;
   margin-bottom: 0px;
   background-color: #f2f2f2;
@@ -386,7 +387,7 @@ h4 {
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-between;
-  height: 560px;
+  height: 510px;
 }
 .rightlinkcard {
   text-decoration: none;
