--- a/css/styles.css
+++ b/css/styles.css
@@ -388,10 +388,12 @@ h4 {
   flex-wrap: nowrap;
   justify-content: space-between;
   height: 567px;
+  margin-top: 9px;
 }
 .rightlinkcard {
   text-decoration: none;
-  margin: auto;
+  margin-bottom: 0px;
+  margin: 0px auto;
   width: 100%;
   height: 156px;
 }
@@ -461,7 +463,7 @@ h4 {
 #activitiesection {
   margin: 20px 0px 0px 20px;
   padding: 0px 0px 0px 20px;
-  width: 94.5%;
+  width: 96%;
   position: relative;
   display: inline-block;
 }
@@ -621,16 +623,9 @@ footer {
   display: flex;
   justify-content: space-between;
 }
-.footerfont {
-  font-size: 15px;
-  font-family: raleway, sans-serif;
-  font-weight: bolder;
-  color: #000000;
-  margin: 30px 30px 10px 30px;
-}
+
 .footerbox {
   display: block;
-  position: relative;
   max-width: 480px;
   min-width: 227px;
   height: 200px;
@@ -638,9 +633,14 @@ footer {
   padding-bottom: 40px;
   padding-top: 0px;
 }
+.footerfont {
+  font-size: 15px;
+  font-family: raleway, sans-serif;
+  font-weight: bolder;
+  color: #000000;
+  margin: 30px 30px 10px 30px;
+}
 .footerlist {
-  display: block;
-  position: relative;
   list-style-type: none;
   padding: 20px 0px 20px 20px;
   margin: 10px;
@@ -853,11 +853,14 @@ footer{
   /***Panneau de droite***/
   #rightpannel {
     width: 100%;
-    height: 650px;
+    height: 700px;
     padding: 24px 40px 0px 10px;
     margin-bottom: 0px;
     background-color: #f2f2f2;
     border-radius: 0px;
+  }
+  .blackstar{
+    right: -83px;
   }
   #blocimg {
     padding-left: 10px;
@@ -867,6 +870,7 @@ footer{
     margin: 15px 0px;
   }
   .rightcard {
+    width:99%;
     height: 150px;
   }
   .rightstylimage {
@@ -926,24 +930,31 @@ footer{
 
   /***footer***/
   footer {
-    position:absolute;
     bottom: 0px;
     margin-top: 65px;
     margin-left: 0px;
-    justify-content: space-around;
-    padding: 60px 40px 0px 0px;
+    padding: 60px 0px 0px 50px;
     width: 100%;
+    box-sizing: border-box;;
     overflow: hidden;
   }
+  #footercontainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
   .footerbox {
+    width: 100%;
+    height: auto;
     margin-left: 0px;
-    margin-right: 88px;
+    
   }
   .footerfont {
-    margin-left: 45px;
+    margin-left: 0px;
   }
   .footerlist {
-    padding-left: 35px;
+    margin-left: 0px;
+    padding-left: 0px;
   }
 }
 
@@ -1068,8 +1079,8 @@ footer{
     top: -1px;
     left: -1px;
     padding: 3px;
-    width: 38px;
-    height: 38px;
+    width: 42px;
+    height: 42px;
   }
   .boldfont {
     padding-right: 10px;
@@ -1146,6 +1157,7 @@ footer{
   .textzone {
     height: 132px;
     width: 60%;
+    position: relative;
   }
   .rightrentag {
     font-size: 20px;
@@ -1155,13 +1167,22 @@ footer{
     font-size: 17px;
     margin-left: 0px;
   }
+  .rightstars{
+    position: absolute;
+    left: 25px;
+    bottom: -7px;
+    margin-left: 0px;
+    padding-left: 0px;
+  }
   .rightbluestars {
-    padding: 5px;
+    padding-right: 11px;
+    padding-left: 0px;
     font-size: 13px;
     color: #0065fc;
   }
   .rightgraystars {
-    padding: 5px;
+    padding-right: 6px;
+    padding-left: 0px;
     font-size: 13px;
     color: rgb(183, 176, 176);
   }
@@ -1174,7 +1195,7 @@ footer{
     margin-left: 10px;
   }
   #leftpanel {
-    width: 90%;
+    width: 98%;
     height: auto;
     background: none;
     margin: 10px auto;
@@ -1202,12 +1223,12 @@ footer{
     margin-bottom: 5px;
   }
   .leftbluestars {
-    padding: 2px;
+    padding: 5px;
     font-size: 12px;
     color: #0065fc;
   }
   .leftgraystars {
-    padding: 2px;
+    padding: 5px;
     font-size: 12px;
     color: rgb(183, 176, 176);
   }
