--- a/css/styles.css
+++ b/css/styles.css
@@ -617,6 +617,7 @@ footer {
   background-color: #f2f2f2;
   background-size: cover;
   padding: 30px 20px 30px 20px;
+  overflow-y: hidden;
 }
 #footercontainer {
   width: 80%;
