--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
   flex-direction: column;
   min-height: 100vh; 
   overflow-x: hidden;
+  overflow-y: auto;
   font-family: raleway, sans-serif;
 }
 
