--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,10 @@ main {
 #searchandfiltersection {
   margin: 0px 40px 15px 40px;
 }
+#searchbar {
+  display: flex;
+  align-items: center;
+}
 h1 {
   font-size: 20px;
   font-weight: 900;
@@ -96,8 +100,7 @@ h1 {
 /***mise en forme de la barre de recherche***/
 #searchbar {
   height: auto;
-  display: flex;
-  align-items: center;
+  
 }
 #locationsearch {
   margin: 20px 0px;
@@ -613,7 +616,7 @@ h4 {
 footer {
   bottom: 0px;
   width: 100%;
-  height: auto;
+  height: 235px;
   margin: 65px 0px 0px 0px;
   background-color: #f2f2f2;
   background-size: cover;
@@ -937,6 +940,7 @@ footer{
     margin-left: 0px;
     padding: 60px 0px 0px 50px;
     width: 100%;
+    height: 250px;
     box-sizing: border-box;;
     overflow: hidden;
   }
