--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@
 html,
 body {
   width: auto;
-  height: auto;
   margin-bottom: 0px;
   display: flex;
   flex-direction: column;
@@ -15,6 +14,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   font-family: raleway, sans-serif;
+  max-width: 2067px;
 }
 
 
