--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   font-family: raleway, sans-serif;
-  max-width: 2067px;
+  max-height: 2067px;
 }
 
 
