--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,10 @@ header {
   border-top: 4px solid #0065fc;
   color: #0065fc;
 }
-
+.tabs:focus {
+  border-top: 4px solid #0065fc;
+  color: #0065fc;
+}
 main {
   width: auto;
   height: auto;
@@ -106,13 +109,15 @@ h1 {
   padding: 17px 50px 17px 17px;
   border-top: 0.5px solid #f2f2f2;
   border-bottom: 0.5px solid #f2f2f2;
-  border-left: 0.5px solid #ffffff;
-  border-right: 0.5px solid #ffffff;
+  border-left: 0;
+  border-right: 0;
   transition-delay: 250ms;
 }
 #locationsearch:hover {
-  box-shadow: -0.5px 0.5px 0.5px 2px #e8effa;
-  border: 0.5px solid #e8effa;
+  box-shadow: -1px 0px 1px 0px #e8effa;
+  border-top: 0.5px solid #e8effa;
+  border-bottom: 0.5px solid #e8effa;
+
 }
 #locationicon {
   flex: 1.5;
@@ -121,15 +126,27 @@ h1 {
   background-color: #f2f2f2;
   font-size: 20px;
 }
+form input{
+  outline: none;
+}
 form input::placeholder {
   text-decoration: none;
-  border-right: 0px solid #ffffff;
   padding-right: 100px;
   font-family: raleway, sans-serif;
   font-size: 16px;
   font-weight: 800;
   color: #000000;
   opacity: 1;
+
+}
+form input:focus {
+  border-top: solid 2px #0065fc;
+  border-bottom: solid 2px #0065fc;
+  border-right: #ffffff;
+}
+form input:focus::-webkit-input-placeholder{
+  visibility: hidden;
+  opacity: 0;
 }
 #searchtext {
   padding: 13px;
@@ -180,7 +197,7 @@ form {
   transition-delay: 250ms;
 }
 .container:hover {
-  box-shadow: -1px 1px 3px 3px #e8effa;
+  box-shadow: -0.4px 0.5px 3px 3px #e8effa;
   border: 3px solid #dedcdc;
 }
 .icons {
@@ -198,7 +215,7 @@ form {
   transition-delay: 250ms;
 }
 .circle1:hover {
-  box-shadow: -1px 1px 1px 2px #e8effa;
+  box-shadow: -05px 0.5px 1px 1px #e8effa;
   color: #448cf8;
 }
 .size1 {
@@ -1025,9 +1042,9 @@ footer{
     margin-left: 19px;
     margin-top: 10px;
   }
-  #searchbar {
-    position: relative;   
+  #searchbar {  
     width: 87%;
+    height: 54.1px;
     margin-left: 26px;
   }
 
@@ -1035,7 +1052,7 @@ footer{
     padding: 14px 17px;
   }
   #locationsearch {
-    width: 75%;
+    width: 68%;
     padding: 14px 0px 14px 17px;
   }
   form input::placeholder {
@@ -1046,21 +1063,37 @@ footer{
   #searchtext {
     display: none;
   }
+  #buttoncontainer{
+    position: relative;
+    width: 52px;
+    height: 53.1px;
+  }
   #iconsearch {
+    position:absolute;
     text-decoration: none;
     display: block;
-    position: absolute;
-    right: 1px;
+    right: 0px;
+    top: 0px;
     font-size: 14px;
     padding: 16.5px 16px;
     color: #ffffff;
     background-color: #0065fc;
     border-color: #0065fc;
     border-radius: 14px;
+    z-index: 1;
   }
   #iconsearch:hover {
     box-shadow: 1px 1px 2px #0065fc;
     cursor: grab;
+  }
+  #borderbutton{
+    position:absolute;
+    width: 20px;
+    height: 49.1px;  
+    left: 0px;
+    top: 2px;
+    border-bottom: #f2f2f2 solid 2px;
+    border-top: #f2f2f2 solid 2px;
   }
   /***Les filtres***/
   h2 {
