--- a/css/styles.css
+++ b/css/styles.css
@@ -991,12 +991,13 @@ footer{
     margin: 0px;
     padding: 0px;
     max-width: 100%;
+    
   }
   header {
     flex-direction: column;
     padding: 0px;
     margin-right: 0px;
-    width: auto;
+    width: auto;   
   }
   #logo {
     margin: 20px auto;
@@ -1005,6 +1006,7 @@ footer{
   #tablist {
     width: auto;
     padding: 5px 0px 0px 0px;
+    margin-bottom: 0;
   }
   #tablist li {
     text-align: center;
@@ -1017,7 +1019,15 @@ footer{
     border-bottom: 4px solid #f2f2f2;
   }
   #tablist a:hover {
-    border-top-style: none;
+    border-top: 0px solid #ffffff;
+    border-bottom: 4px solid #0065fc;
+  }
+  #tablist a:active {
+    border-top: 0px solid #ffffff;
+    border-bottom: 4px solid #0065fc;
+  }
+  #tablist a:focus {
+    border-top: 0px solid #ffffff;
     border-bottom: 4px solid #0065fc;
   }
   #li2 {
@@ -1043,16 +1053,16 @@ footer{
     margin-top: 10px;
   }
   #searchbar {  
-    width: 87%;
+    width: 100%;
     height: 54.1px;
-    margin-left: 26px;
+   justify-content: center;
   }
 
   #locationicon {
     padding: 14px 17px;
   }
   #locationsearch {
-    width: 68%;
+    width: 60%;
     padding: 14px 0px 14px 17px;
   }
   form input::placeholder {
@@ -1068,6 +1078,15 @@ footer{
     width: 52px;
     height: 53.1px;
   }
+  #borderbutton{
+    position:absolute;
+    width: 20px;
+    height: 49.1px;  
+    left: 0px;
+    top: 2px;
+    border-bottom: #f2f2f2 solid 2px;
+    border-top: #f2f2f2 solid 2px;
+  }
   #iconsearch {
     position:absolute;
     text-decoration: none;
@@ -1080,20 +1099,10 @@ footer{
     background-color: #0065fc;
     border-color: #0065fc;
     border-radius: 14px;
-    z-index: 1;
   }
   #iconsearch:hover {
     box-shadow: 1px 1px 2px #0065fc;
     cursor: grab;
-  }
-  #borderbutton{
-    position:absolute;
-    width: 20px;
-    height: 49.1px;  
-    left: 0px;
-    top: 2px;
-    border-bottom: #f2f2f2 solid 2px;
-    border-top: #f2f2f2 solid 2px;
   }
   /***Les filtres***/
   h2 {
